Fix Bugs and Improve Dialog Message
Fix Bugs on reset password, Improve Dialog Message for download, and Improve some error message and UI

--- a/LocAdoc/app/src/main/res/layout/activity_passwordrecovery.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_passwordrecovery.xml
@@ -7,172 +7,168 @@
               android:layout_marginRight="20dp"
               android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/pwdrecovery_desc1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingTop="20dp"
-            android:text="@string/pwdrecovery_desc1"
-            android:textColor="@android:color/black"
-            />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/pwdrecovery_desc2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/pwdrecovery_desc2"
-            android:textColor="@android:color/black"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewEmailMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="@dimen/activity_text_size_small"/>
+                <TextView
+                    android:id="@+id/pwdrecovery_desc1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="20dp"
+                    android:text="@string/pwdrecovery_desc1"
+                    android:textColor="@android:color/black" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/pwdrecovery_desc2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pwdrecovery_desc2"
+                    android:textColor="@android:color/black" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <!-- New Password -->
-        <TextView
-            android:id="@+id/textViewNewPasswordLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="@dimen/activity_text_size_small"/>
+                <TextView
+                    android:id="@+id/textViewEmailMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="@dimen/activity_text_size_small" />
 
-        <Space
-            android:id="@+id/pwdrecovery_space1"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_intra_group_separation"
-            android:layout_alignParentStart="true"/>
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/pwdrecovery_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/pwdrecovery_pwd"
-            android:inputType="textPassword"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <!-- New Password -->
+                <TextView
+                    android:id="@+id/textViewNewPasswordLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="@dimen/activity_text_size_small" />
 
-        <TextView
-            android:id="@+id/textViewNewPasswordMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/alert"
-            android:textSize="@dimen/activity_text_padding"/>
+                <Space
+                    android:id="@+id/pwdrecovery_space1"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_intra_group_separation" />
 
-        <!-- Confrim New Password -->
-        <TextView
-            android:id="@+id/textViewConfirmNewPasswordLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="@dimen/activity_text_size_small"/>
+                <EditText
+                    android:id="@+id/pwdrecovery_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/pwdrecovery_pwd"
+                    android:inputType="textPassword" />
 
-        <Space
-            android:id="@+id/pwdrecovery_space2"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_intra_group_separation"
-            android:layout_alignParentStart="true"/>
+                <TextView
+                    android:id="@+id/textViewNewPasswordMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/alert"
+                    android:textSize="@dimen/activity_text_padding" />
 
-        <EditText
-            android:id="@+id/pwdrecovery_confrimpwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/pwdrecovery_confirmpwd"
-            android:inputType="textPassword"/>
+                <!-- Confrim New Password -->
+                <TextView
+                    android:id="@+id/textViewConfirmNewPasswordLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="@dimen/activity_text_size_small" />
 
-        <TextView
-            android:id="@+id/textViewConfirmNewPasswordMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/alert"
-            android:textSize="@dimen/activity_text_padding"/>
+                <Space
+                    android:id="@+id/pwdrecovery_space2"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_intra_group_separation" />
 
-        <!-- Verification Code -->
-        <TextView
-            android:id="@+id/textViewVerifiCodeLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="@dimen/activity_text_size_small"/>
+                <EditText
+                    android:id="@+id/pwdrecovery_confrimpwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/pwdrecovery_confirmpwd"
+                    android:inputType="textPassword" />
 
-        <Space
-            android:id="@+id/pwdrecovery_space3"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_intra_group_separation"
-            android:layout_alignParentStart="true"/>
+                <TextView
+                    android:id="@+id/textViewConfirmNewPasswordMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/alert"
+                    android:textSize="@dimen/activity_text_padding" />
 
-        <EditText
-            android:id="@+id/pwdrecovery_verificode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/pwdrecovery_desc2"
-            android:layout_centerHorizontal="true"
-            android:ems="10"
-            android:hint="@string/pwdrecovery_code"
-            android:inputType="number" />
+                <!-- Verification Code -->
+                <TextView
+                    android:id="@+id/textViewVerifiCodeLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="@dimen/activity_text_size_small" />
 
-        <TextView
-            android:id="@+id/textViewVerifiCodeMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/alert"
-            android:textSize="@dimen/activity_text_padding"/>
+                <Space
+                    android:id="@+id/pwdrecovery_space3"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_intra_group_separation" />
 
-        <Space
-            android:id="@+id/pwdrecovery_space4"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_intra_group_separation"
-            android:layout_alignParentStart="true"/>
+                <EditText
+                    android:id="@+id/pwdrecovery_verificode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/pwdrecovery_code"
+                    android:inputType="number" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/textViewVerifiCodeMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/alert"
+                    android:textSize="@dimen/activity_text_padding" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical|center_horizontal">
+                <Space
+                    android:id="@+id/pwdrecovery_space4"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_intra_group_separation" />
 
-        <Button
-            android:id="@+id/pwdrecovery_submit"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="29dp"
-            android:text="@string/pwdrecovery_submit"
-            android:textColor="@android:color/background_light"/>
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/pwdrecovery_submit"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pwdrecovery_submit"
+                    android:textColor="@android:color/background_light" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
