--- a/LocAdoc/app/src/main/res/layout/fragment_import_file.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_import_file.xml
@@ -156,7 +156,7 @@
             <Spinner
                 android:id="@+id/ExistingArea"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:theme="@style/STheme" />
 
             <Button
