Tidying up codes
Remove unnecessary lines and all logs

--- a/LocAdoc/app/src/main/res/layout/fragment_new_area.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_new_area.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
@@ -57,7 +56,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
@@ -74,7 +73,7 @@
                     android:id="@+id/RadiusEditText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_weight="0.9"
                     android:background="@color/white"
                     android:hint="@string/radius_hint"
@@ -85,7 +84,7 @@
                     android:id="@+id/MeterLabel"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_weight="2.8"
                     android:text="@string/meter_label"
                     android:textColor="@color/white"
