--- a/LocAdoc/app/src/main/res/layout/item_file.xml
+++ b/LocAdoc/app/src/main/res/layout/item_file.xml
@@ -10,15 +10,15 @@
         android:id="@+id/ItemFileName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/FileSettingsButton"
-        android:layout_alignParentLeft="true"
+        android:layout_toStartOf="@+id/FileSettingsButton"
+        android:layout_alignParentStart="true"
         android:layout_centerInParent="true" />
 
     <ImageButton
         android:id="@+id/FileSettingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:background="@android:color/transparent"
         app:srcCompat="@drawable/ic_menu_black_24dp" />
