--- a/LocAdoc/app/src/main/res/layout/fragment_file_operations.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_file_operations.xml
@@ -45,7 +45,7 @@
                 <Spinner
                     android:id="@+id/AreaSpinner"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
@@ -59,7 +59,7 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:text="Copy File" />
+                    android:text="@string/file_operation_ButtonCopy" />
 
                 <Button
                     android:id="@+id/buttonMove"
@@ -69,7 +69,7 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:text="Move File" />
+                    android:text="@string/file_operation_ButtonMove" />
 
                 <Button
                     android:id="@+id/buttonDelete"
@@ -79,7 +79,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:backgroundTint="@color/alert"
-                    android:text="Delete"
+                    android:text="@string/file_operation_ButtonDelete"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
@@ -91,7 +91,7 @@
                     android:layout_marginBottom="15dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:text="Back" />
+                    android:text="@string/file_operation_ButtonBack" />
             </LinearLayout>
         </ScrollView>
 
