--- a/LocAdoc/app/src/main/res/layout/nav_header_home_page.xml
+++ b/LocAdoc/app/src/main/res/layout/nav_header_home_page.xml
@@ -16,7 +16,7 @@
         android:id="@+id/LocAdoc_Logo_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:layout_weight="1"
         android:elevation="2dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
